--- a/source/css/scss/patterns/03-organisms/_featured-profiles-list.scss
+++ b/source/css/scss/patterns/03-organisms/_featured-profiles-list.scss
@@ -13,8 +13,13 @@
     }
   }
   .featured-profiles-list__item {
-    border-bottom: 1px solid $background-gray;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    &:last-child {
+      border: none;
+      padding-bottom: 0;
+      margin-bottom: 0;
+    }
+    border-bottom: 1px solid $darkgray;
+    padding-bottom: 32px;
+    margin-bottom: 40px;
   }
 }
